Ticket #2301 fix float and broken layout issues

--- a/sites/all/themes/picsforpets/css/style.css
+++ b/sites/all/themes/picsforpets/css/style.css
@@ -1198,10 +1198,23 @@ fieldset .form-item {
   display: inline;
   float: left;
 }
+.form-item-email input,
+.form-item-cell input {
+  display: inline;
+  float: left;
+}
 .form-item-email label,
 .form-item-cell label {
-  color: black;
+  color: white;
   font-size: 14px;
+  clear: both;
+  border: 0;
+  padding: 0;
+  padding-top: 8px;
+  font-size: 12px;
+  color: #ec1c24;
+  width: 150px;
+  line-height: 1.5;
 }
 
 .form-item-kit {
