--- a/sites/all/themes/picsforpets/sass/partials/04-defaults/forms/_form-defaults.sass
+++ b/sites/all/themes/picsforpets/sass/partials/04-defaults/forms/_form-defaults.sass
@@ -187,9 +187,19 @@ fieldset
 .form-item-email,
 .form-item-cell
   +float-left
+  input
+    +float-left
   label
-    color: $black
+    color: $white
     font-size: 14px
+    clear: both
+    border: 0
+    padding: 0
+    padding-top: 8px
+    font-size: 12px
+    color: $pfp-red
+    width: 150px
+    line-height: 1.5
 
 .form-item-kit
   +float-left
